phase2/manifests/slurm-phase2-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slurm-elastic-operator
  namespace: slurm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slurm-elastic-operator
  template:
    metadata:
      labels:
        app: slurm-elastic-operator
    spec:
      serviceAccountName: slurm-elastic-operator
      containers:
        - name: operator
          image: slurm-elastic-operator:phase2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  test -f /tmp/operator-alive &&
                  test $(( $(date +%s) - $(stat -c %Y /tmp/operator-alive) )) -lt 120
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
